projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/Saldo_Ferias__c.object-meta.xml
<CustomObject>
    <description>Rastreia dias de ferias disponiveis e consumidos por colaborador, por periodo aquisitivo.</description>
    <label>Saldo de Ferias</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Numero do Saldo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saldos de Ferias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>