projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Saldos de Ferias</relationshipLabel>
    <relationshipName>Saldos_Ferias</relationshipName>
    <type>Lookup</type>
</CustomField>