projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Dias_Abono_Vendidos__c.field-meta.xml
<CustomField>
    <fullName>Dias_Abono_Vendidos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dias Abono Vendidos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>