projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Dias_Direito__c.field-meta.xml
<CustomField>
    <fullName>Dias_Direito__c</fullName>
    <description>Aplica a escala do art. 130 CLT com base em faltas injustificadas. Para PJ, retorna 20 fixos.</description>
    <formula>IF(
    ISPICKVAL(Regime_Contratacao__c, "PJ"),
    20,
    IF(Faltas_Injustificadas__c &lt;= 5, 30,
        IF(Faltas_Injustificadas__c &lt;= 14, 24,
            IF(Faltas_Injustificadas__c &lt;= 23, 18,
                IF(Faltas_Injustificadas__c &lt;= 32, 12, 0)
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de Direito</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>