projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Dias_Disponiveis__c.field-meta.xml
<CustomField>
    <fullName>Dias_Disponiveis__c</fullName>
    <formula>Dias_Direito__c - Dias_Tirados__c - Dias_Abono_Vendidos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias Disponiveis</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>