projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Dias_Tirados__c.field-meta.xml
<CustomField>
    <fullName>Dias_Tirados__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dias Tirados</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>