projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Faltas_Injustificadas__c.field-meta.xml
<CustomField>
    <fullName>Faltas_Injustificadas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Faltas Injustificadas</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>