projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Periodo_Aquisitivo_Fim__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Aquisitivo_Fim__c</fullName>
    <formula>ADDMONTHS(Periodo_Aquisitivo_Inicio__c, 12) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo Aquisitivo - Fim</label>
    <type>Date</type>
</CustomField>