projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Periodo_Aquisitivo_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Aquisitivo_Inicio__c</fullName>
    <label>Periodo Aquisitivo - Inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>