projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Periodo_Concessivo_Fim__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Concessivo_Fim__c</fullName>
    <formula>ADDMONTHS(Periodo_Aquisitivo_Inicio__c, 24) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo Concessivo - Fim</label>
    <type>Date</type>
</CustomField>