projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Regime_Contratacao__c.field-meta.xml
<CustomField>
    <fullName>Regime_Contratacao__c</fullName>
    <label>Regime de Contratacao</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLT</fullName>
                <default>true</default>
                <label>CLT</label>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>