projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
                <default>true</default>
                <label>Vigente</label>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Concluido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>