projeto-itau-agentforce/force-app/main/default/objects/Saldo_Ferias__c/validationRules/Abono_Maximo_1_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Abono_Maximo_1_3</fullName>
    <active>true</active>
    <description>CLT art. 143: abono pecuniario limitado a 1/3 do periodo. PJ nao tem abono.</description>
    <errorConditionFormula>OR(
  ISPICKVAL(Regime_Contratacao__c, "PJ") &amp;&amp; Dias_Abono_Vendidos__c &gt; 0,
  Dias_Abono_Vendidos__c &gt; FLOOR(Dias_Direito__c / 3)
)</errorConditionFormula>
    <errorMessage>Abono pecuniario limitado a 1/3 dos dias de direito (CLT art. 143). PJ nao possui abono.</errorMessage>
</ValidationRule>